# rust-api

./: Cargo.toml
.github/workflows/: release.yaml
src/: catchers.rs  main.rs
src/fairings/: mod.rs  powered_by.rs
src/guards/: jwt.rs
src/routes/: base64.rs  binary.rs  mod.rs  token.rs
