[package]
name = "api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077" }
base64 = "0.13.0"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
