[package]
name = "api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077" }
base64 = "0.13.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
